# Code-gaurdian

./: .env.example  .gitignore  AST_VS_REGEX_GUIDE.md  DOCLING_INTEGRATION.md  DOCLING_UPGRADE_SUMMARY.md  HYBRID_APPROACH_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  INTEGRATION_GUIDE.md  MIGRATION_TO_HYBRID.md  MULTI_LANGUAGE_GUIDE.md  MULTI_LANGUAGE_SUPPORT.md  QUICKSTART.md  README.md  SYSTEM_DIAGRAM.md  TEST_REPORT.md  __init__.py  config.py  models.py  multi_language_demo.py  pyproject.toml  quick_test.py  requirements.txt  requirements_enhanced.txt  server.py  simple_test.py  supabase_schema.sql  test_all_components.py  test_embedding_fix.py  test_manual.py  test_mcp_integration.py  test_mcp_tools.py
language_support/: __init__.py  base.py  golang.py  java.py  javascript.py  python.py  python_enhanced.py  typescript.py
tests/: __init__.py  test_ast_vs_regex_benchmark.py  test_cache.py  test_code_validator.py  test_docling_chunker.py  test_integration_end_to_end.py  test_language_support.py  test_multi_language.py  test_server.py  test_web_search.py
utils/: __init__.py  aho_corasick_matcher.py  ast_extractors.py  batch_embeddings.py  cache.py  code_extractor.py  code_validator.py  contextual_retrieval.py  crawler.py  doc_url_registry.py  docling_chunker.py  duckduckgo_search.py  embeddings.py  error_detector.py  hybrid_search.py  llm_reranker.py  multi_language_doc_finder.py  multi_language_extractor.py  multi_language_registry.py  ollama_client.py  parallel_crawler.py  query_expansion.py  reranker.py  smart_chunker.py  source_manager.py  supabase_client.py  ultra_fast_crawler.py  universal_doc_finder.py  version_resolver.py  web_search.py
